GF30787: Fixed missing background logo in the header.
git-svn-id: https://ncisvn.nci.nih.gov/svn/ncit/trunk@2326 0604bb77-1110-461e-859e-28c50bf9b280

--- a/software/ncitbrowser/web/css/styleSheet.css
+++ b/software/ncitbrowser/web/css/styleSheet.css
@@ -146,6 +146,7 @@ a.hideLink
  float: left;
  width: 382px;
  height: 117px;
+ background-image: url(../images/evs_browser_other_term_logo.gif);
  background-repeat: no-repeat;
  text-decoration: none;
  cursor: pointer;
